# C-MusicBot

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  main.c
mattermost/: CMakeLists.txt  banana.c  mattermost.c  mattermost.h  mattermostsocket.c
